--- a/package.json
+++ b/package.json
@@ -23,30 +23,30 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@angular/animations": "~13.2.3",
-    "@angular/common": "~13.2.3",
-    "@angular/compiler": "~13.2.3",
-    "@angular/core": "~13.2.3",
-    "@angular/forms": "~13.2.3",
-    "@angular/platform-browser": "~13.2.3",
-    "@angular/platform-browser-dynamic": "~13.2.3",
-    "@angular/router": "~13.2.3",
+    "@angular/animations": "~13.3.0",
+    "@angular/common": "~13.3.0",
+    "@angular/compiler": "~13.3.0",
+    "@angular/core": "~13.3.0",
+    "@angular/forms": "~13.3.0",
+    "@angular/platform-browser": "~13.3.0",
+    "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/router": "~13.3.0",
     "moment": "^2.29.1",
-    "ng-zorro-antd": "^13.0.1",
+    "ng-zorro-antd": "^13.1.1",
     "ngx-cookie-service": "^13.1.2",
-    "rxjs": "~7.5.4",
+    "rxjs": "~7.5.5",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.4",
-    "@angular/cli": "~13.2.4",
-    "@angular/compiler-cli": "~13.2.3",
-    "@types/jasmine": "~3.10.3",
-    "@types/node": "^17.0.18",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
+    "@angular-devkit/build-angular": "~13.3.0",
+    "@angular/cli": "~13.3.0",
+    "@angular/compiler-cli": "~13.3.0",
+    "@types/jasmine": "~3.10.4",
+    "@types/node": "^17.0.21",
+    "jasmine-core": "~4.0.1",
+    "karma": "~6.3.17",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
