--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "ng-zorro-antd": "^13.1.1",
     "ngx-cookie-service": "^13.1.2",
@@ -43,6 +44,7 @@
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.4",
+    "@types/lodash": "^4.14.180",
     "@types/node": "^17.0.21",
     "jasmine-core": "~4.0.1",
     "karma": "~6.3.17",
