--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,11 @@
                 "glob": "**/*",
                 "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
                 "output": "/assets/"
+              },
+              {
+                "glob": "**/*",
+                "input": "./node_modules/tinymce",
+                "output": "/tinymce/"
               }
             ],
             "styles": [
