--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@tinymce/tinymce-angular": "^5.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "ng-zorro-antd": "^13.1.1",
     "ngx-cookie-service": "^13.1.2",
     "rxjs": "~7.5.5",
+    "tinymce": "^5.10.3",
     "tslib": "^2.3.1",
     "zone.js": "^0.11.5"
   },
