--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@antv/g2": "^4.1.50",
     "@tinymce/tinymce-angular": "^5.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
